--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="caja">
-                <h1><img src="imagenes/logo.png" alt="Logo de la Barbería AlurA"></h1>
+                <h1><img src="imagenes/logo.png" alt="Logo de la Barbería Alura"></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
